# hacspec

./: Cargo.toml  rust-toolchain  search-index.js  source-files.js
.github/workflows/: generate_examples_coq.yml  generate_files.yml
Literate/: hacspec-auction.rs  literate_programming.html  literate_programming.org  literate_programming.tex  rust-auction.rs
concordium-provider/: Cargo.toml
concordium-provider/src/: auction_provider.rs  lib.rs  piggy_provider.rs  provider.rs
coq/: .Makefile.d  CoqMakefile.conf  Issues.txt  Makefile.conf  _CoqProject  coq-hacspec.opam
coq/_vc/: Cis1.v  Concordium_Impls.v  Concordium_Prims.v  Hacspec_Aes.v  Hacspec_Bip_340.v  Hacspec_Bls12_381.v  Hacspec_Concordium_Auction.v  Hacspec_Concordium_Piggybank.v  Hacspec_Concordium_Wccd.v  Hacspec_Coverage_Test.v  Hacspec_Curve25519.v  Hacspec_Ecdsa_P256_Sha256.v  Hacspec_Ed25519.v  Hacspec_Edwards25519.v  Hacspec_Edwards25519_Ecvrf.v  Hacspec_Edwards25519_Hash.v  Hacspec_Gf128.v  Hacspec_Linalg.v  Hacspec_Merlin.v  Hacspec_P256.v  Hacspec_Poly1305.v  Hacspec_Riot_Runqueue.v  Hacspec_Rsa_Fdh_Vrf.v  Hacspec_Rsa_Pkcs1.v  Hacspec_Sha1.v  Hacspec_Wccd.v  Pearlite_Example.v  Tls_Cryptolib.v
coq/_vc/_vc/: Concordium_Impls.v  Constants.v  Hacspec_Auction.v  Hacspec_Piggybank.v  Hacspec_Wccd.v  Test_Infrastructure.v
coq/src/: Aes.v  Auction.v  Auction_template.v  Bls.v  Chacha20.v  Chacha20poly1305.v  ChoiceEquality.v  Cis1.v  ConCertLib.v  Concert_Lib.v  Concordium.v  ConcordiumImpls.v  ConcordiumImpls_template.v  Concordium_Impls.v  Concordium_Impls_template.v  Concordium_Prims.v  Concordium_Traits.v  Concordium_Types.v  Concordium_template.v  Constants.v  Curve25519.v  Ecdsa_p256_sha256.v  Fib_template.v  Gf128.v  Gimli.v  HacspecIntegerDefinitions.v  Hacspec_Aes.v  Hacspec_Aes128_Gcm.v  Hacspec_Auction.v  Hacspec_Bip_340.v  Hacspec_Bls12_381.v  Hacspec_Bls12_381_Hash.v  Hacspec_Chacha20.v  Hacspec_Chacha20poly1305.v  Hacspec_Concordium.v  Hacspec_Concordium_Auction.v  Hacspec_Concordium_Piggybank.v  Hacspec_Concordium_Wccd.v  Hacspec_Ed25519.v  Hacspec_Edwards25519.v  (+58 more)
coq/src/_vc/: Hacspec_Concordium.v
coq_ssprove/: _CoqProject
coq_ssprove/_vc/: Hacspec_Aes.v  Hacspec_Bip_340.v  Hacspec_Bls12_381.v  Hacspec_Chacha20poly1305.v  Hacspec_Coverage_Test.v  Hacspec_Curve25519.v  Hacspec_Edwards25519.v  Hacspec_Gf128.v  Hacspec_Gimli.v  Hacspec_Ntru_Prime.v  Hacspec_Riot_Runqueue.v  Hacspec_Ristretto.v  Hacspec_Rsa_Fdh_Vrf.v  Hacspec_Rsa_Pkcs1.v  Hacspec_Sha1.v  Hacspec_Sha3.v  Hacspec_Sha512.v
coq_ssprove/src/: ChoiceEquality.v  Hacspec_Aes.v  Hacspec_Aes128_Gcm.v  Hacspec_Aes_Jazz.v  Hacspec_Bip_340.v  Hacspec_Bls12_381.v  Hacspec_Bls12_381_Hash.v  Hacspec_Chacha20.v  Hacspec_Chacha20poly1305.v  Hacspec_Coverage_Test.v  Hacspec_Curve25519.v  Hacspec_Ecdsa_P256_Sha256.v  Hacspec_Ed25519.v  Hacspec_Edwards25519.v  Hacspec_Edwards25519_Ecvrf.v  Hacspec_Edwards25519_Hash.v  Hacspec_Gf128.v  Hacspec_Gimli.v  Hacspec_Hkdf.v  Hacspec_Hmac.v  Hacspec_Lib.v  Hacspec_Lib_Integers.v  Hacspec_Lib_Pre.v  Hacspec_Linalg.v  Hacspec_Merlin.v  Hacspec_Ntru_Prime.v  Hacspec_P256.v  Hacspec_Poly1305.v  Hacspec_Riot_Bootloader.v  Hacspec_Riot_Runqueue.v  Hacspec_Ristretto.v  Hacspec_Rsa_Fdh_Vrf.v  Hacspec_Rsa_Pkcs1.v  Hacspec_Sha1.v  Hacspec_Sha256.v  Hacspec_Sha3.v  Hacspec_Sha512.v  Hacspec_Xor.v  LocationUtility.v  Strobe.v  (+3 more)
equivalence_proofs/ssprove/: aes_hac.v  xor_hac.v
examples/: Cargo.toml  rust-toolchain  typecheck_examples.sh
examples/aes_jazz/: Cargo.toml
examples/auction/: Cargo.toml
examples/auction/src/: auction.rs  lib.rs
examples/bls12-381/: Cargo.toml
examples/concordium/: Cargo.toml
examples/concordium-derive/: Cargo.toml
examples/concordium-derive/src/: hacspec_concordium_impls.rs  hacspec_concordium_traits.rs  hacspec_concordium_types.rs  lib.rs  test_infrastructure.rs
examples/concordium-impls/: Cargo.toml
examples/concordium-impls/src/: concordium-impls.rs  lib.rs
examples/concordium/src/: concordium.rs  concordium_impls.rs  concordium_prims.rs  concordium_traits.rs  concordium_types.rs  hacspec_concordium_impls.rs  hacspec_concordium_prims.rs  hacspec_concordium_traits.rs  hacspec_concordium_types.rs  lib.rs  test_infrastructure.rs
examples/concordium_impls/: Cargo.toml
examples/concordium_impls/src/: concordium_impls.rs
examples/coverage-example/: Cargo.toml
examples/coverage-example/src/: lib.rs
examples/fib/: Cargo.toml
examples/fib/src/: fib.rs
examples/pearlite-example/: Cargo.toml
examples/pearlite-example/src/: lib.rs  pearlite_example.rs
examples/pearlite-example/test/: test_lib.rs
examples/piggybank/: Cargo.toml
examples/piggybank/src/: lib.rs  piggybank.rs
examples/typecheck/: Cargo.toml
examples/wccd/: Cargo.toml
fstar/: Hacspec.Chacha20.fst  Hacspec.Chacha20Poly1305.fst  Hacspec.Curve25519.fst  Hacspec.Hkdf.fst  Hacspec.Hmac.fst  Hacspec.NtruPrime.fst  Hacspec.P256.fst  Hacspec.Poly1305.fst  Hacspec.Riot.Bootloader.fst  Hacspec.Riot.Runqueue.fst  Hacspec.Sha256.fst  Hacspec.Sha3.fst
hacspec_dev/prelude/: enum.Value.html  trait.Deserialize.html  trait.Serialize.html
language/: Cargo.toml
language/backend-tests/: array.rs  auction.rs  binary_operations.rs  casting.rs  concordium_impls.rs  seq.rs  string.rs
language/language-tests/: option.rs  tuples.rs
language/src/: ast_to_rustspec.rs  bin.rs  concordium.rs  hir_to_rustspec.rs  main.rs  name_resolution.rs  pearlite.rs  rustspec.rs  rustspec_to_coq.rs  rustspec_to_coq_base.rs  rustspec_to_coq_ssprove.rs  rustspec_to_coq_ssprove_pure.rs  rustspec_to_coq_ssprove_state.rs  rustspec_to_easycrypt.rs  rustspec_to_fstar.rs  typechecker.rs  util.rs
language/tests/: 0_language.rs  1_backend_files.rs
lib/: Cargo.toml
lib/src/: array.rs  concert.rs  lib.rs  prelude.rs  seq.rs  struct_unfold.rs
libc/: all.html  index.html
miniz_oxide/: all.html  index.html
miniz_oxide/inflate/: index.html  (+1 more)
rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
serde_json/: index.html
utils/concordium-bench/: Cargo.toml
utils/concordium-bench/benches/: benchmarks.rs
(+86 files in other folders)
