[package]
name = "hacspec-concordium-provider"
version = "0.1.0-beta.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec-provider"
description = "Cryptographic provider with hacspec primitives using the RustCrypto APIs."
readme = "../README.md"
repository = "https://github.com/hacspec/hacspec"

[dependencies]
hacspec-lib = { path = "../lib", version = "0.1.0-beta.1" }
aead = { version = "0.4", features = ["alloc"] }
concordium-std = { version = "0.5" }
piggybank = { path = "../examples/piggybank" }

[dev-dependencies]
evercrypt-provider = { path = "../utils/evercrypt-provider" }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
