[package]
name = "hacspec-concordium-derive"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-attributes = { path = "../../utils/attributes", version = "0.1.0-beta.1" , features = ["print_attributes", "hacspec_unsafe"] } # , features = ["hacspec_unsafe"] , , optional = true
creusot-contracts = { path = "../../../../creusot/creusot-contracts" }
concordium-contracts-common = { path = "../../../../concordium-rust-smart-contracts/concordium-contracts-common" ,  version = "=2.0.0" , default-features = false }
# hacspec-concordium = { path = "../concordium" }
syn = { version = "1.0.63", features = [ "full", "extra-traits" ] }
quote = "=1.0.0"
proc-macro2 = "1.0"

# Reduce code size, at the cost of performance in allocation heavy-code.
wee_alloc="0.4.5"

[features]
use_attributes = ["hacspec-attributes/print_attributes", "hacspec-attributes/hacspec_unsafe"]

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
criterion = "0.3"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
