[package]
name = "hacspec-concordium"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
path = "src/concordium.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" }
concordium-contracts-common = { git = "https://github.com/Concordium/concordium-contracts-common", rev = "84ff7db509ca1fbf958b47e5e5903b7662295850", version = "=2.0.0", default-features = false }
hacspec-concordium-derive = { path = "../concordium-derive" }
hacspec-attributes = { path = "../../utils/attributes/" }

# Reduce code size, at the cost of performance in allocation heavy-code.
wee_alloc="0.4.5"

[features]
contracts = ["creusot-contracts/contracts"]
hacspec = []

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
criterion = "0.3"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"