[package]
name = "pearlite-example"
version = "0.1.0"
authors = ["Lasse Letager Hansen <letager@cs.au.dk>"]
edition = "2018"

[lib]
path = "src/pearlite_example.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = master
hacspec-attributes = { path = "../../utils/attributes/" }

[features]
hacspec = []

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
criterion = "0.4"
rand = "0.8"