[package]
name = "pearlite-example"
version = "0.1.0"
authors = ["Lasse Letager Hansen <letager@cs.au.dk>"]
edition = "2018"

[lib]
path = "src/pearlite_example.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "1cca2320e262b2ec9d28b3c84cba759c96829898" } # branch = master

[features]
hacspec = []
# use_attributes = ["hacspec-attributes", "hacspec-attributes/print_attributes"]

[dev-dependencies]
hacspec-dev = { path = "../../utils/dev" }
criterion = "0.4"
rand = "0.8"