[package]
name = "hacspec-concordium-piggybank"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
path = "src/piggybank.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
# hacspec-attributes = { path = "../../utils/attributes/" }
creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "1f8670f" } # branch = "master"

concordium-contracts-common = { git = "https://github.com/Concordium/concordium-contracts-common", rev = "84ff7db509ca1fbf958b47e5e5903b7662295850" ,  version = "=2.0.0" , default-features = false }
hacspec-concordium = { path = "../concordium" }
hacspec-concordium-derive = { path = "../concordium-derive" }

[features]
contracts = ["creusot-contracts/contracts"]
hacspec = []